{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 355,
  "lineage": "f5e9ab47-07c9-bc3b-09e2-bc4ba2321d34",
  "resources": [
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:918852166718:loadbalancer/elb",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b",
              "eu-west-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-388518481.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 100,
            "instances": [
              "i-008d6e3d56d139542",
              "i-0462ab3be76f7ced0",
              "i-0bc25b4da88c79e61"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-01755a57b9505647d"
            ],
            "source_security_group": "918852166718/terraform-20210404131032548600000001",
            "source_security_group_id": "sg-01755a57b9505647d",
            "subnets": [
              "subnet-01410e11574ccf576",
              "subnet-022ca59750b503e9b",
              "subnet-06316fcfd7b9393b9"
            ],
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.stack-europe.aws_instance.webservers",
            "module.stack-europe.aws_security_group.security_group",
            "module.stack-europe.aws_subnet.public",
            "module.stack-europe.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ffea00000f287d30",
            "arn": "arn:aws:ec2:eu-west-1:918852166718:instance/i-0bc25b4da88c79e61",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc25b4da88c79e61",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e955d2da207cd39d",
            "private_dns": "ip-10-0-1-132.eu-west-1.compute.internal",
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-3-250-42-98.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.42.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098b3b24aa97d9e6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01755a57b9505647d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022ca59750b503e9b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01755a57b9505647d"
            ]
          },
          "dependencies": [
            "module.stack-europe.aws_security_group.security_group",
            "module.stack-europe.aws_subnet.public",
            "module.stack-europe.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ffea00000f287d30",
            "arn": "arn:aws:ec2:eu-west-1:918852166718:instance/i-008d6e3d56d139542",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008d6e3d56d139542",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0349641bc69e073cf",
            "private_dns": "ip-10-0-2-90.eu-west-1.compute.internal",
            "private_ip": "10.0.2.90",
            "public_dns": "ec2-54-171-198-247.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.198.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088c7c20f3553c4f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01755a57b9505647d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01410e11574ccf576",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01755a57b9505647d"
            ]
          },
          "dependencies": [
            "module.stack-europe.aws_security_group.security_group",
            "module.stack-europe.aws_subnet.public",
            "module.stack-europe.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ffea00000f287d30",
            "arn": "arn:aws:ec2:eu-west-1:918852166718:instance/i-0462ab3be76f7ced0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0462ab3be76f7ced0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-022847a65d5c96c28",
            "private_dns": "ip-10-0-3-104.eu-west-1.compute.internal",
            "private_ip": "10.0.3.104",
            "public_dns": "ec2-34-242-114-133.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.114.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065a450f5cfb3f4ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01755a57b9505647d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06316fcfd7b9393b9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01755a57b9505647d"
            ]
          },
          "dependencies": [
            "module.stack-europe.aws_security_group.security_group",
            "module.stack-europe.aws_subnet.public",
            "module.stack-europe.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918852166718:internet-gateway/igw-0b04928486ecb10c9",
            "id": "igw-0b04928486ecb10c9",
            "owner_id": "918852166718",
            "vpc_id": "vpc-06b8a5988b1cdfeb1"
          },
          "dependencies": [
            "module.stack-europe.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918852166718:route-table/rtb-01f9c2e87e548caa6",
            "id": "rtb-01f9c2e87e548caa6",
            "owner_id": "918852166718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b04928486ecb10c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-06b8a5988b1cdfeb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack-europe.aws_internet_gateway.igw",
            "module.stack-europe.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed5330c7ca09a0f",
            "route_table_id": "rtb-01f9c2e87e548caa6",
            "subnet_id": "subnet-022ca59750b503e9b"
          },
          "dependencies": [
            "module.stack-europe.aws_internet_gateway.igw",
            "module.stack-europe.aws_route_table.public_rt",
            "module.stack-europe.aws_subnet.public",
            "module.stack-europe.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aec795a1b4a963f8",
            "route_table_id": "rtb-01f9c2e87e548caa6",
            "subnet_id": "subnet-01410e11574ccf576"
          },
          "dependencies": [
            "module.stack-europe.aws_internet_gateway.igw",
            "module.stack-europe.aws_route_table.public_rt",
            "module.stack-europe.aws_subnet.public",
            "module.stack-europe.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0edfdd33b045c5c",
            "route_table_id": "rtb-01f9c2e87e548caa6",
            "subnet_id": "subnet-06316fcfd7b9393b9"
          },
          "dependencies": [
            "module.stack-europe.aws_internet_gateway.igw",
            "module.stack-europe.aws_route_table.public_rt",
            "module.stack-europe.aws_subnet.public",
            "module.stack-europe.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918852166718:security-group/sg-01755a57b9505647d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01755a57b9505647d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210404131032548600000001",
            "name_prefix": "terraform-",
            "owner_id": "918852166718",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-06b8a5988b1cdfeb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack-europe.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918852166718:subnet/subnet-022ca59750b503e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-022ca59750b503e9b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918852166718",
            "vpc_id": "vpc-06b8a5988b1cdfeb1"
          },
          "dependencies": [
            "module.stack-europe.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918852166718:subnet/subnet-01410e11574ccf576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01410e11574ccf576",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918852166718",
            "vpc_id": "vpc-06b8a5988b1cdfeb1"
          },
          "dependencies": [
            "module.stack-europe.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918852166718:subnet/subnet-06316fcfd7b9393b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06316fcfd7b9393b9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918852166718",
            "vpc_id": "vpc-06b8a5988b1cdfeb1"
          },
          "dependencies": [
            "module.stack-europe.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack-europe",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.stack-europe.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918852166718:vpc/vpc-06b8a5988b1cdfeb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001ccc9c6f50be8d7",
            "default_route_table_id": "rtb-041e7fdf3e793b6f3",
            "default_security_group_id": "sg-025e5e8b36e5bfce7",
            "dhcp_options_id": "dopt-e7a1ae81",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06b8a5988b1cdfeb1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-041e7fdf3e793b6f3",
            "owner_id": "918852166718"
          }
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:918852166718:loadbalancer/elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-570266831.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 100,
            "instances": [
              "i-03a269894513cd25b",
              "i-065ca203288b5b4c8",
              "i-0e50c0542ca071ee6",
              "i-0ef3fd33ac1c5ef33"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-00a0da48d817eb91f"
            ],
            "source_security_group": "918852166718/terraform-20210404131028054800000001",
            "source_security_group_id": "sg-00a0da48d817eb91f",
            "subnets": [
              "subnet-014d841fa2fc03520",
              "subnet-0385fbace11f28874",
              "subnet-0d1d73f9dc66d8dbc",
              "subnet-0e2ec844d4362c34d"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.stack_us.aws_instance.webservers",
            "module.stack_us.aws_security_group.security_group",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:918852166718:instance/i-0ef3fd33ac1c5ef33",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef3fd33ac1c5ef33",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017048ce4c76eda6d",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-54-164-199-114.compute-1.amazonaws.com",
            "public_ip": "54.164.199.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe870d214a518bf5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00a0da48d817eb91f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014d841fa2fc03520",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a0da48d817eb91f"
            ]
          },
          "dependencies": [
            "module.stack_us.aws_security_group.security_group",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:918852166718:instance/i-03a269894513cd25b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a269894513cd25b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08965c68b35eb1f01",
            "private_dns": "ip-10-0-2-144.ec2.internal",
            "private_ip": "10.0.2.144",
            "public_dns": "ec2-44-192-2-133.compute-1.amazonaws.com",
            "public_ip": "44.192.2.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08472818f17a8c4f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00a0da48d817eb91f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0385fbace11f28874",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a0da48d817eb91f"
            ]
          },
          "dependencies": [
            "module.stack_us.aws_security_group.security_group",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:918852166718:instance/i-065ca203288b5b4c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065ca203288b5b4c8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074cb827dc9855736",
            "private_dns": "ip-10-0-3-80.ec2.internal",
            "private_ip": "10.0.3.80",
            "public_dns": "ec2-54-147-125-178.compute-1.amazonaws.com",
            "public_ip": "54.147.125.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f3699a6a240a27c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00a0da48d817eb91f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1d73f9dc66d8dbc",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a0da48d817eb91f"
            ]
          },
          "dependencies": [
            "module.stack_us.aws_security_group.security_group",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:918852166718:instance/i-0e50c0542ca071ee6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e50c0542ca071ee6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-048e5ddce994316fc",
            "private_dns": "ip-10-0-4-43.ec2.internal",
            "private_ip": "10.0.4.43",
            "public_dns": "ec2-54-243-27-206.compute-1.amazonaws.com",
            "public_ip": "54.243.27.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ff0fb81054ad185",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00a0da48d817eb91f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2ec844d4362c34d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a0da48d817eb91f"
            ]
          },
          "dependencies": [
            "module.stack_us.aws_security_group.security_group",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:internet-gateway/igw-0853446a841abdd8f",
            "id": "igw-0853446a841abdd8f",
            "owner_id": "918852166718",
            "vpc_id": "vpc-05a70c2e0927867a1"
          },
          "dependencies": [
            "module.stack_us.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:route-table/rtb-0be8eb2a771dbf58d",
            "id": "rtb-0be8eb2a771dbf58d",
            "owner_id": "918852166718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0853446a841abdd8f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-05a70c2e0927867a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_us.aws_internet_gateway.igw",
            "module.stack_us.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cabb1f82f251cffb",
            "route_table_id": "rtb-0be8eb2a771dbf58d",
            "subnet_id": "subnet-014d841fa2fc03520"
          },
          "dependencies": [
            "module.stack_us.aws_internet_gateway.igw",
            "module.stack_us.aws_route_table.public_rt",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0371ab813dc944dd3",
            "route_table_id": "rtb-0be8eb2a771dbf58d",
            "subnet_id": "subnet-0385fbace11f28874"
          },
          "dependencies": [
            "module.stack_us.aws_internet_gateway.igw",
            "module.stack_us.aws_route_table.public_rt",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c6ff6ea097b9171",
            "route_table_id": "rtb-0be8eb2a771dbf58d",
            "subnet_id": "subnet-0d1d73f9dc66d8dbc"
          },
          "dependencies": [
            "module.stack_us.aws_internet_gateway.igw",
            "module.stack_us.aws_route_table.public_rt",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04971cbfaa43f6766",
            "route_table_id": "rtb-0be8eb2a771dbf58d",
            "subnet_id": "subnet-0e2ec844d4362c34d"
          },
          "dependencies": [
            "module.stack_us.aws_internet_gateway.igw",
            "module.stack_us.aws_route_table.public_rt",
            "module.stack_us.aws_subnet.public",
            "module.stack_us.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:security-group/sg-00a0da48d817eb91f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a0da48d817eb91f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210404131028054800000001",
            "name_prefix": "terraform-",
            "owner_id": "918852166718",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05a70c2e0927867a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.stack_us.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:subnet/subnet-014d841fa2fc03520",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-014d841fa2fc03520",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918852166718",
            "vpc_id": "vpc-05a70c2e0927867a1"
          },
          "dependencies": [
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:subnet/subnet-0385fbace11f28874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0385fbace11f28874",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918852166718",
            "vpc_id": "vpc-05a70c2e0927867a1"
          },
          "dependencies": [
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:subnet/subnet-0d1d73f9dc66d8dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d1d73f9dc66d8dbc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918852166718",
            "vpc_id": "vpc-05a70c2e0927867a1"
          },
          "dependencies": [
            "module.stack_us.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:subnet/subnet-0e2ec844d4362c34d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e2ec844d4362c34d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918852166718",
            "vpc_id": "vpc-05a70c2e0927867a1"
          },
          "dependencies": [
            "module.stack_us.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack_us",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.stack_us.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:918852166718:vpc/vpc-05a70c2e0927867a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073db4e097de4d215",
            "default_route_table_id": "rtb-0531d307f346997e3",
            "default_security_group_id": "sg-04c1d310e7f473276",
            "dhcp_options_id": "dopt-f3443f89",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05a70c2e0927867a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0531d307f346997e3",
            "owner_id": "918852166718"
          }
        }
      ]
    }
  ]
}